all task button

--- a/src/template.html
+++ b/src/template.html
@@ -6,8 +6,9 @@
     <title>Todo-List</title>
 </head>
 <body>
-    <div class = "content">
-        
+    <div class = "content" id ="content">
+
     </div>
+    <script src ="index.js"></script>
 </body>
 </html>
